[tool.poetry]
name = "enhance"
version = "1.0.0a1"
description = "A declarative data augmentation framework"
authors = [
    "Nicolò Di Domenico <nicolo.didomenico@studio.unibo.it>",
]
license = "Apache 2.0"
readme = "README.md"

documentation = "https://ndido98.github.io/enhance"
homepage = "https://ndido98.github.io/enhance"
repository = "https://github.com/ndido98/enhance"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "enhance", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"

[tool.poetry.group.dev.dependencies]
autoflake = "~1.5"
black = "~22.8"
flake8 = "~5.0"
flake8-bugbear = "~22.8"
flake8-builtins = "~1.5"
flake8-comprehensions = "~3.10"
flake8-debugger = "~4.1"
flake8-eradicate = "~1.3"
flake8-logging-format = "~0.7"
isort = "~5.10"
mkdocstrings = "~0.19"
mkdocs-material = "~8.4"
mypy = "~0.971"
pep8-naming = "~0.13"
pre-commit = "~2.20"
pymdown-extensions = "~9.5"
pytest = "~7.1"
pytest-github-actions-annotate-failures = "~0.1"
pytest-cov = "~3.0"
pyupgrade = "~2.37"
tryceratops = "~1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov enhance \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
