[tool.poetry]
name = "revelio"
version = "1.0.0a1"
description = "A declarative framework for face morphing detection experiments"
authors = [
    "Nicolò Di Domenico <nicolo.didomenico@studio.unibo.it>",
]
license = "Apache 2.0"
readme = "README.md"

documentation = "https://ndido98.github.io/revelio"
homepage = "https://ndido98.github.io/revelio"
repository = "https://github.com/ndido98/revelio"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "revelio", from = "src" }
]

[tool.poetry.scripts]
revelio = "revelio.cli:main"

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pyyaml = "~6.0"
pydantic = "~1.10"
# HACK: Poetry does not yet support fetching from PyPI with extras fetched from a custom URL,
# so we need to hardcode the Wheel URL until they fix it.
torch = [
    { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cu116/torch-1.12.1%2Bcu116-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
]
torchvision = [
    { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'" },
    { url = "https://download.pytorch.org/whl/cu116/torchvision-0.13.1%2Bcu116-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'" },
]

[tool.poetry.dev-dependencies]
autoflake = "~1.5"
black = "~22.8"
flake8 = "~5.0"
flake8-bugbear = "~22.9.0"
flake8-builtins = "~1.5"
flake8-comprehensions = "~3.10"
flake8-debugger = "~4.1"
flake8-eradicate = "~1.3"
flake8-logging-format = "~0.7"
hypothesis = "~6.54"
isort = "~5.10"
mkdocstrings = "~0.19"
mkdocs-material = "~8.5.0"
mypy = "~0.971"
pep8-naming = "~0.13"
pre-commit = "~2.20"
pymdown-extensions = "~9.5"
pytest = "~7.1"
pytest-github-actions-annotate-failures = "~0.1"
pytest-cov = "~3.0"
pyupgrade = "~2.37"
tryceratops = "~1.1"
types-Pillow = "~9.2"
types-pyyaml = "~6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov revelio \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
